<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".cr_info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2da7a1"
            android:padding="5dp"
            android:text="9th Batch--Session (2013-14)"
            android:textSize="24dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="5sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cr9th"
            android:textSize="20dp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#2da7a1"
            android:padding="5dp"
            android:text="10th Batch--Session (2014-15)"
            android:textSize="24dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="5sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cr10th"
            android:textSize="20dp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#2da7a1"
            android:padding="5dp"
            android:text="11th Batch--Session (2015-16)"
            android:textSize="24dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="5sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cr11th"
            android:textSize="20dp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#2da7a1"
            android:padding="5dp"
            android:text="12th Batch--Session (2016-17)"
            android:textSize="24dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="5sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cr12th"
            android:textSize="20dp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#2da7a1"
            android:padding="5dp"
            android:gravity="center"
            android:text="13th Batch--Session (2017-18)"
            android:textSize="24dp"
            android:textStyle="bold"
            android:layout_marginBottom="5sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cr13th"
            android:textSize="20dp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5sp"/>

    </LinearLayout>
</ScrollView>